# rust_demo_2

./: Cargo.toml  README.md
src/: lib.rs
volo-gen/: Cargo.toml  build.rs  volo.yml
